# ai-workflow-installer

./: README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: customization.md  discovery.md
scripts/: install_ai_workflow.py
src/ai_workflow_installer/: __init__.py  cli.py  skill_cli.py
src/ai_workflow_installer/skill_bundle/: SKILL.md
src/ai_workflow_installer/skill_bundle/references/: customization.md  discovery.md  intake.md
src/ai_workflow_installer/skill_bundle/scripts/: install_ai_workflow.py
